# Fastapi_project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-ci.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: push.yml  python-app.yml  tests.yml
app/conf.d/: app.conf
database/: db.env  db.py  models.py
src/: __main__.py  db.py  main.py  server.py
src/database/: db.py
src/tests/: test_read_users.py
tests/: conftest.py  test_read_users.py
