[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include='./' }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
